--- a/public/_locales/uk/messages.json
+++ b/public/_locales/uk/messages.json
@@ -555,7 +555,7 @@
         "description": "Referring to submissions that have not been sent to the server yet."
     },
     "seekreativKBarColor": {
-        "message": "Колір в смузі прокрутки"
+        "message": "Колір в смужці прокрутки"
     },
     "category": {
         "message": "Категорія"
