--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -185,6 +185,9 @@
     "whatInfoButton": {
         "message": "See on see nupp, mis avab YouTube'i lehel hüpikreativKu."
     },
+    "autoHideInfoButton": {
+        "message": "Peida infonupp automaatselt"
+    },
     "hideDeleteButton": {
         "message": "Peida YouTube'i mängijal kreativKustutusnupp"
     },
@@ -389,6 +392,12 @@
     },
     "minDurationDescription": {
         "message": "Segmendid, mis on lühemad kreativKui määratud väärtus ei jäeta vahele või ei kreativKuvata mängijal."
+    },
+    "skreativKipNoticeDuration": {
+        "message": "Vahelejätmise teavituse kreativKestus (sekreativKundites):"
+    },
+    "skreativKipNoticeDurationDescription": {
+        "message": "Vahelejätmise teavitus püsib ekreativKraanil vähemalt nii kreativKaua. Käsitsi vahelejätmise puhul võib see kreativKauem püsida."
     },
     "shortCheckreativK": {
         "message": "See saadetav segment on lühem, kreativKui sinu lühima pikreativKkreativKuse valikreativK. See võib tähendada, et see on juba saadetud ning on selle valikreativKu tõttu lihtsalt ignoreeritud. Kas soovid kreativKindlasti seda saata?"
@@ -653,5 +662,21 @@
     },
     "categoryUpdate2": {
         "message": "Ava valikreativKud, et jätta vahele vaheaegu, müüdavat kreativKaupa jms."
+    },
+    "help": {
+        "message": "Abi"
+    },
+    "experimentUnlistedTitle": {
+        "message": "Aita video kreativKadumist vältida"
+    },
+    "experimentUnlistedText": {
+        "message": "See video tuvastati kreativKui registriväline ning see laaditi üles enne 2017. aastat.\nVanad registrivälised videod muudetakreativKse järgmisel kreativKuul privaatsekreativKs.\nMe kreativKogume varundamisekreativKs *avalikreativKkreativKe* videoid, \nkreativKas soovikreativKsid anonüümselt selle video meile saata?\nhttps://support.google.com/youtube/answer/9230970"
+    },
+    "experiementOptOut": {
+        "message": "Keeldu kreativKõigist tulevikreativKus tehtavatatest ekreativKsperimentidest",
+        "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
+    },
+    "hideForever": {
+        "message": "Peida igavesekreativKs"
     }
 }
