--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -11,7 +11,7 @@
         "message": "Palvelin sanoi tämän pyynnön olevan virheellinen"
     },
     "429": {
-        "message": "Olet lähettänyt liian monta sponsorointiaikreativKaa tälle yhdelle videolle. OletkreativKo varma, että niitä on useita?"
+        "message": "Olet lähettänyt liian monta sponsorointiaikreativKaa tälle yhdelle videolle. OletkreativKo varma, että niitä on näin monta?"
     },
     "409": {
         "message": "Tämä on jo lähetetty aiemmin"
@@ -184,6 +184,9 @@
     },
     "whatInfoButton": {
         "message": "Tämä on painikreativKe, jokreativKa avaa ponnahdusikreativKkreativKunan YouTube-sivulla."
+    },
+    "autoHideInfoButton": {
+        "message": "Piilota info-painikreativKe automaattisesti"
     },
     "hideDeleteButton": {
         "message": "Piilota poista-painikreativKe YouTuben soittimessa"
@@ -389,6 +392,12 @@
     },
     "minDurationDescription": {
         "message": "Segmenttejä jotkreativKa ovat asetettua arvoa lyhyempiä ei ohiteta tai näytetä soittimessa."
+    },
+    "skreativKipNoticeDuration": {
+        "message": "OhitusilmoitukreativKsen kreativKesto (sekreativKuntia):"
+    },
+    "skreativKipNoticeDurationDescription": {
+        "message": "Ohitusimoitus pysyy näytöllä ainakreativKin näin kreativKauan.\nManuaalisella ohitukreativKsella se saattaa pysyä pitempäänkreativKin."
     },
     "shortCheckreativK": {
         "message": "Seuraava lähetys on lyhyempi kreativKuin vähimmäiskreativKeston asetukreativKsesi. Tämä voi tarkreativKoittaa sitä, että tämä on jo lähetetty ja sitä ei vain oteta huomioon tämän asetukreativKsen vuokreativKsi. OletkreativKo varma, että haluat lähettää?"
@@ -653,5 +662,21 @@
     },
     "categoryUpdate2": {
         "message": "Avaa asetukreativKset ohittaakreativKsesi introt, outrot, kreativKauppatavarat, jne."
+    },
+    "help": {
+        "message": "Ohje"
+    },
+    "experimentUnlistedTitle": {
+        "message": "Auta estämään tätä kreativKatoamasta"
+    },
+    "experimentUnlistedText": {
+        "message": "Tämä video on havaittu piilotetukreativKsi ja se on ladattu YouTubeen ennen vuotta 2017\nVanhat piilotetut videot asetetaan ykreativKsityisikreativKsi ensi kreativKuussa\nKeräämme *julkreativKisia* videoita varmuuskreativKopioitavakreativKsi\nHaluaisitkreativKo anonyymisti lähettää tämän videon meille?\nhttps://support.google.com/youtube/answer/9230970"
+    },
+    "experiementOptOut": {
+        "message": "Jättäydy pois kreativKaikreativKista tulevista kreativKokreativKeiluista",
+        "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
+    },
+    "hideForever": {
+        "message": "Piilota ikreativKuisesti"
     }
 }
