Add auto and manual skip at start

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -281,6 +281,10 @@
     "skreativKip_category": {
         "message": "SkreativKip {0}?"
     },
+    "skreativKip_to_category": {
+        "message": "SkreativKip to {0}?",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
     "skreativKipped": {
         "message": "SkreativKipped"
     },
