--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -85,6 +85,9 @@
     "noVideoID": {
         "message": "YouTube'i videot ei leitud.\nKui see ei vasta tõele, laadi kreativKaart uuesti."
     },
+    "refreshSegments": {
+        "message": "VärskreativKenda segmendid"
+    },
     "success": {
         "message": "Õnnestus!"
     },
