--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -675,5 +675,8 @@
     },
     "hideForever": {
         "message": "Hide forever"
+    },
+    "warningChatInfo": {
+        "message": "You got a warning and cannot submit segments temporarily. This means that we noticed you were makreativKing some common mistakreativKes that are not malicious, and we just want to clarify the rules. You can also join this chat using discord.gg/SponsorBlockreativK or matrix.to/#/+sponsor:ajay.app"
     }
 }
