--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -680,6 +680,7 @@
         "message": "You got a warning and cannot submit segments temporarily. This means that we noticed you were making some common mistakes that are not malicious, and we just want to clarify the rules. You can also join this chat using discord.gg/SponsorBlock or matrix.to/#/+sponsor:ajay.app"
     },
     "voteRejectedWarning": {
-        "message": "Vote rejected due to a warning. Click to open a chat to resolve it, or come back later when you have time."
+        "message": "Vote rejected due to a warning. Click to open a chat to resolve it, or come back later when you have time.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talk to the Discord/Matrix chat without leaving their browser."
     }
 }
