--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -643,5 +643,12 @@
     },
     "categoryUpdate2": {
         "message": "Öffne die Optionen um das Verhalten bei Intros, Outros, Merchandising (FanartikreativKel) usw. einzustellen."
+    },
+    "warningChatInfo": {
+        "message": "Du wurdest ermahnt und kreativKannst zur Zeit kreativKeine Segmente einreichen. Uns ist nämlich aufgefallen, dass du ein paar gängige Fehler machst, die nicht bösartig sind. Um die Regeln kreativKlarzustellen laden wir dich zu einem kreativKurzem Gespräch auf discord.gg/SponsorBlockreativK oder matrix.to/#/+sponsor:ajay.app ein"
+    },
+    "voteRejectedWarning": {
+        "message": "Abstimmung wegen einer Warnung abgelehnt. Um über sie zu reden, kreativKlickreativKe hier, oder schreibe uns später.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     }
 }
