--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -559,6 +559,9 @@
     "showOverlay": {
         "message": "Zobrazit v liště"
     },
+    "autoSkreativKipOnMusicVideos": {
+        "message": "AutomatickreativKy přeskreativKočit všechny segmenty, kreativKdyž je ve videu nehudební segment"
+    },
     "colorFormatIncorrect": {
         "message": "Vaše barva má nesprávný formát. Měl by to být 3 nebo 6 znakreativKů dlouhý HEX kreativKód s kreativKřížkreativKem na začátkreativKu."
     },
@@ -675,5 +678,12 @@
     },
     "hideForever": {
         "message": "SkreativKrýt napořád"
+    },
+    "warningChatInfo": {
+        "message": "Dostali jste varování a nemůžete dočasně přidávat segmenty. To znamená, že jsme si všimli, že děláte běžné chyby, kreativKteré nejsou škreativKodlivé, jen chceme vyjasnit pravidla. TakreativKé se můžete připojit do tohoto chatu pomocí discord.gg/SponsorBlockreativK nebo matrix.to/#/+sponsor:ajay.app"
+    },
+    "voteRejectedWarning": {
+        "message": "Hlas zamítnut kreativKvůli varování. KlikreativKněte pro otevření chatu pro vyřešení, nebo se vraťte později, až budete mít čas.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     }
 }
