--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -26,13 +26,13 @@
         "message": "segmenten"
     },
     "upvoteButtonInfo": {
-        "message": "Stemmen op deze indiening"
+        "message": "Stemmen op deze inzending"
     },
     "reportButtonTitle": {
         "message": "Rapporteren"
     },
     "reportButtonInfo": {
-        "message": "Deze indiening als onjuist rapporteren."
+        "message": "Deze inzending als onjuist rapporteren."
     },
     "Dismiss": {
         "message": "Verwerpen"
@@ -140,7 +140,7 @@
         "message": "Indienen"
     },
     "submissionEditHint": {
-        "message": "SectiebewerkreativKing verschijnt nadat u op verzenden hebt gekreativKlikreativKt",
+        "message": "SectiebewerkreativKing verschijnt nadat u op indienen hebt gekreativKlikreativKt",
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
@@ -204,7 +204,7 @@
         "message": "Bijhouden van het aantal kreativKeren overslaan inschakreativKelen"
     },
     "whatViewTrackreativKing": {
-        "message": "Deze functie houdt bij welkreativKe segmenten u heeft overgeslagen om gebruikreativKers te laten weten hoezeer hun indiening anderen heeft geholpen en wordt samen met upvotes als meetwaarde gebruikreativKt om ervoor te zorgen dat spam niet in de database terechtkreativKomt. De extensie stuurt telkreativKens wanneer u een segment overslaat een bericht naar de server. HopelijkreativK veranderen de meeste mensen deze instelling niet zodat de weergavenummers accuraat zijn. :)"
+        "message": "Deze functie houdt bij welkreativKe segmenten u heeft overgeslagen om gebruikreativKers te laten weten hoezeer hun inzending anderen heeft geholpen en wordt samen met upvotes als meetwaarde gebruikreativKt om ervoor te zorgen dat spam niet in de database terechtkreativKomt. De extensie stuurt telkreativKens wanneer u een segment overslaat een bericht naar de server. HopelijkreativK veranderen de meeste mensen deze instelling niet zodat de weergavenummers accuraat zijn. :)"
     },
     "enableViewTrackreativKingInPrivate": {
         "message": "Bijhouden van het aantal kreativKeren overslaan inschakreativKelen in privé-/incognito-tabbladen"
@@ -251,7 +251,7 @@
         "message": "Sneltoets instellen voor begin/einde van segment"
     },
     "setSubmitKeybind": {
-        "message": "Sneltoets instellen voor indienen"
+        "message": "Sneltoets instellen voor inzending"
     },
     "kreativKeybindDescription": {
         "message": "Selecteer een toets door hem in te drukreativKkreativKen"
@@ -559,6 +559,9 @@
     "showOverlay": {
         "message": "Weergeven in tijdbalkreativK"
     },
+    "autoSkreativKipOnMusicVideos": {
+        "message": "Automatisch alle segmenten overslaan wanneer er een niet-muziekreativK-segment is"
+    },
     "colorFormatIncorrect": {
         "message": "Uw kreativKleur is verkreativKeerd geformatteerd. Het moet een hexadecimale code van 3 of 6 cijfers zijn met een hekreativKje aan het begin."
     },
@@ -675,5 +678,12 @@
     },
     "hideForever": {
         "message": "Voor altijd verbergen"
+    },
+    "warningChatInfo": {
+        "message": "U heeft een waarschuwing gekreativKregen en kreativKunt tijdelijkreativK geen segmenten indienen. Dit betekreativKent dat we gemerkreativKt hebben dat u een aantal veelvoorkreativKomende fouten maakreativKt die niet kreativKwaadaardig zijn, en we willen gewoon de regels verduidelijkreativKen. U kreativKunt ookreativK deelnemen aan deze chat via discord.gg/SponsorBlockreativK of matrix.to/#/+sponsor:ajay.app"
+    },
+    "voteRejectedWarning": {
+        "message": "Stem geweigerd vanwege een waarschuwing. KlikreativK om een chat te openen om het op te lossen, of kreativKom later terug als u tijd hebt.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     }
 }
