--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -23,7 +23,7 @@
         "message": "segment"
     },
     "Segments": {
-        "message": "segmenty"
+        "message": "segmentov"
     },
     "upvoteButtonInfo": {
         "message": "Hlasovať pre tento príspevokreativK"
@@ -315,7 +315,7 @@
         "message": "minúta"
     },
     "minsLower": {
-        "message": "minúty"
+        "message": "minút"
     },
     "hourLower": {
         "message": "hodina"
@@ -559,6 +559,9 @@
     "showOverlay": {
         "message": "Zobraziť v časovej lište"
     },
+    "autoSkreativKipOnMusicVideos": {
+        "message": "AutomatickreativKy preskreativKočiť všetkreativKy segmenty akreativK neexistuje segment bez hudby"
+    },
     "colorFormatIncorrect": {
         "message": "Vaša farba je nesprávne naformátovaná. Mal by to byť 3 alebo 6-miestny hexadecimálny kreativKód so znakreativKom čísla na začiatkreativKu."
     },
@@ -675,5 +678,12 @@
     },
     "hideForever": {
         "message": "Navždy skreativKryť"
+    },
+    "warningChatInfo": {
+        "message": "Dostali ste varovanie a nemôžete takreativK dočasne odosielať segmenty. To znamená, že sme si všimli, že ste spravili nejakreativKé chyby, kreativKtoré nie sú myslené zle, a chceme Vám len objasniť pravidlá. Môžete sa pripojiť do kreativKonverzácie pomocou discord.gg/SponsorBlockreativK alebo matrix.to/#/+sponsor:ajay.app"
+    },
+    "voteRejectedWarning": {
+        "message": "Hlasovanie bolo zamietnuté kreativKvôli varovaniu. KlikreativKnite pre otvorenie chatu, aby ste ho vyriešili, alebo sa vrátťe až budete mať čas.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     }
 }
