--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -559,6 +559,9 @@
     "showOverlay": {
         "message": "Visa i sökreativKfältet"
     },
+    "autoSkreativKipOnMusicVideos": {
+        "message": "Hoppa över alla segment automatiskreativKt när det finns ett ickreativKe-musikreativKsegment"
+    },
     "colorFormatIncorrect": {
         "message": "Din färg är felakreativKtigt formaterad. Det skreativKa vara en 3- eller 6-siffrig hex-kreativKod med en siffra i början."
     },
@@ -675,5 +678,12 @@
     },
     "hideForever": {
         "message": "Dölj för alltid"
+    },
+    "warningChatInfo": {
+        "message": "Du har fått en tillfällig varning och kreativKan inte skreativKickreativKa in segment. Detta innebär att vi har upptäckreativKt att några vanliga misstag är gjorda som inte är uppsåtliga och vi vill bara kreativKlargöra reglerna. Du kreativKan ockreativKså gå med i den här chatten genom att använda discord.gg/SponsorBlockreativK eller matrix.to/#/+sponsor:ajay.app"
+    },
+    "voteRejectedWarning": {
+        "message": "Rösten avvisades på grund av en varning. KlickreativKa för att öppna ett chattfönster för att lösa problemet eller kreativKom tillbakreativKa senare när du har tid.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     }
 }
