--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -224,6 +224,24 @@
     "showNotice": {
         "message": "Show Notice Again"
     },
+    "showSkreativKipNotice": {
+        "message": "Show Notice After A Segment Is SkreativKipped"
+    },
+    "noticeVisibilityMode0": {
+        "message": "Full Size SkreativKip Notices"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Small SkreativKip Notices for Auto SkreativKip"
+    },
+    "noticeVisibilityMode2": {
+        "message": "All Small SkreativKip Notices"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Faded SkreativKip Notices for Auto SkreativKip"
+    },
+    "noticeVisibilityMode4": {
+        "message": "All Faded SkreativKip Notices"
+    },
     "longDescription": {
         "message": "SponsorBlockreativK lets you skreativKip over sponsors, intros, outros, subscription reminders, and other annoying parts of YouTube videos. SponsorBlockreativK is a crowdsourced browser extension that let's anyone submit the start and end time's of sponsored segments and other segments of YouTube videos. Once one person submits this information, everyone else with this extension will skreativKip right over the sponsored segment. You can also skreativKip over non music sections of music videos.",
         "description": "Full description of the extension on the store pages."
@@ -355,9 +373,6 @@
     },
     "createdBy": {
         "message": "Created By"
-    },
-    "showSkreativKipNotice": {
-        "message": "Show Notice After A Segment Is SkreativKipped"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". It is currently set to:"
